# next-showing

./: .gitignore  README.md  lb_parser.py  main.py  package-lock.json  package.json  parser.py  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/components/: AgentStatus.tsx  Header.tsx  Poster.tsx  RatingCell.tsx
backend/: main.py
backend/models/: schemas.py
backend/routers/: parse.py  recommend.py
backend/scripts/: test_pipeline.py
backend/services/: ollama.py  omdb.py  tmdb.py
